--- a/index.html
+++ b/index.html
@@ -47,50 +47,161 @@
             </ul>
         </div>
     </div>
-    <header class="lms__header">
+
+    <section class="header__section">
         <div class="container">
-            <div class="lms__header__wrraper">
-                <div class="lms__header__item1">
-                    <h4 class="lms__header__item1_group">Gruhlar:</h4>
-                    <h4 class="lms__header__item1_subject">Fan:</h4>
+            <div class="header__wrraper">
+                <div class="header__container">
+                    <div class="header__container__group__wrraper">
+                        <h4 class="header__container__group">Gruhlar:</h4>
+                        <span class="header__container__group__text">23-216</span>
+                    </div>
+                    <div class="header__container__group__wrraper">
+                        <h4 class="header__container__group">fan:</h4>
+                        <span class="header__container__group__text">Website Development</span>
+                    </div>
                 </div>
-                <div class="lms__header__item2">
-                    <div class="lms__header__item2__color1">
-                        <span class="lms__header__item2__color1_green"></span>
-                        <p class="lms__header__item2__color1__text">Qatnashdi</p>
+                <div class="header__container">
+                    <div class="header__container__davomat__wrraper">
+                        <span class="header__container__davomat__wrraper__color1"></span>
+                        <h5 class="header__container__davomat__wrraper__text">Qatnashdi</h5>
                     </div>
-                    <div class="lms__header__item2__color1">
-                        <span class="lms__header__item2__color1_red"></span>
-                        <p class="lms__header__item2__color1__text">Qantashmagan</p>
+                    <div class="header__container__davomat__wrraper">
+                        <span class="header__container__davomat__wrraper__color2"></span>
+                        <h5 class="header__container__davomat__wrraper__text">Qatnashmagan</h5>
                     </div>
-                    <div class="lms__header__item2__color1">
-                        <span class="lms__header__item2__color1_yellow"></span>
-                        <p class="lms__header__item2__color1__text">Kech qolgan</p>
+                    <div class="header__container__davomat__wrraper">
+                        <span class="header__container__davomat__wrraper__color3"></span>
+                        <h5 class="header__container__davomat__wrraper__text">Kech qolgan</h5>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
+    </section>
 
-    <main class="lms__navbar">
+    <section class="navbar__section">
         <div class="container">
-            <div class="lms__navbar__wrraper">
-            <div class="lms__navbar__wrraper__item1">
-                <h5 class="lms__navbar__wrraper__item1_student">Talabalar\Kunlar</h5>
-                <div class="lms__navbar__wrraper__item1_btn">
-                    <button class="lms__navbar__wrraper__item1__button">save</button>
-                    <span class="lms__navbar__wrraper__item1__btn_text">Izoh</span>
+            <nav class="navbar__wrraper">
+                <div class="navbar__wrraper__container1">
+                    <span class="navbar__wrraper__container__students_day">Talabalar\Kunlar</span>
+                    <div class="navbar__wrraper__container__izoh__wrraper">
+                        <div class="navbar__wrraper__container__izoh__wrraper_btn__container">
+                            <span
+                                class="navbar__wrraper__container__izoh__wrraper_btn__container__date">19/12/2023</span>
+                            <div class="navbar__wrraper__container__izoh__wrraper_btn__container__btn"><span class="navbar__wrraper__container__izoh__wrraper_btn__container__btn__rol"></span></div>
+                        </div>
+                        <p class="navbar__wrraper__container__izoh__wrraper__text">Izoh</p>
+                    </div>
                 </div>
-            </div> 
+                <div class="navbar__wrraper__container2">
+                    <div class="navbar__wrraper__container__list">
+                        <img class="navbar__wrraper__container__list__img" src="./css/img/png/homework_navbar.png"
+                            alt="errro">
+                        <p class="navbar__wrraper__container__list__text">Uyga vazifa</p>
+                    </div>
+                    <div class="navbar__wrraper__container__list">
+                        <img class="navbar__wrraper__container__list__img" src="./css/img/png/finished-work.png"
+                            alt="errro">
+                        <p class="navbar__wrraper__container__list__text">finish_lesson</p>
+                    </div>
+                    <div class="navbar__wrraper__container__list">
+                        <img class="navbar__wrraper__container__list__img" src="./css/img/png/finished-work.png"
+                            alt="errro">
+                        <p class="navbar__wrraper__container__list__text">Darslar</p>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </section>
 
-            <div class="lms__navbar__wrraper__item2">
-                <div class="lms__navbar__wrraper__item2__items">Uyga vazifa</div>
-                <div class="lms__navbar__wrraper__item2__items">finish_lesson</div>
-                <div class="lms__navbar__wrraper__item2__items">Darslar </div>
-            </div> 
+    <section class="main__section">
+        <div class="container">
+            <div class="main__wrraper">
+                <ul class="main__wrraper__list">
+                    <li class="main__wrraper__list__link">
+                        <div class="main__wrraper__list__link_name_wrrpaer">
+                            <span class="main__wrraper__list__link_name_wrrpaer__id">1</span>
+                            <div class="main__wrraper__list__link_name_wrrpaer_name">ABDULLAYEV MUHAMMAD</div>
+                        </div>
+                        <span class="main__wrraper__list__link_color"></span>
+                        <div class="main__wrraper__list__link_comment">
+                            <img class="main__wrraper__list__link_comment__img" src="./css/img/png/chat.png" alt="error">
+                        </div>
+                    </li>
+                    <li class="main__wrraper__list__link">
+                        <div class="main__wrraper__list__link_name_wrrpaer">
+                            <span class="main__wrraper__list__link_name_wrrpaer__id">2</span>
+                            <div class="main__wrraper__list__link_name_wrrpaer_name">ABDULLAYEV MUHAMMAD</div>
+                        </div>
+                        <span class="main__wrraper__list__link_color"></span>
+                        <div class="main__wrraper__list__link_comment">
+                            <img class="main__wrraper__list__link_comment__img" src="./css/img/png/chat.png" alt="error">
+                        </div>
+                    </li>
+                    <li class="main__wrraper__list__link">
+                        <div class="main__wrraper__list__link_name_wrrpaer">
+                            <span class="main__wrraper__list__link_name_wrrpaer__id">3</span>
+                            <div class="main__wrraper__list__link_name_wrrpaer_name">ABDULLAYEV MUHAMMAD</div>
+                        </div>
+                        <span class="main__wrraper__list__link_color"></span>
+                        <div class="main__wrraper__list__link_comment">
+                            <img class="main__wrraper__list__link_comment__img" src="./css/img/png/chat.png" alt="error">
+                        </div>
+                    </li>
+                    <li class="main__wrraper__list__link">
+                        <div class="main__wrraper__list__link_name_wrrpaer">
+                            <span class="main__wrraper__list__link_name_wrrpaer__id">4</span>
+                            <div class="main__wrraper__list__link_name_wrrpaer_name">ABDULLAYEV MUHAMMAD</div>
+                        </div>
+                        <span class="main__wrraper__list__link_color"></span>
+                        <div class="main__wrraper__list__link_comment">
+                            <img class="main__wrraper__list__link_comment__img" src="./css/img/png/chat.png" alt="error">
+                        </div>
+                    </li>
+                    <li class="main__wrraper__list__link">
+                        <div class="main__wrraper__list__link_name_wrrpaer">
+                            <span class="main__wrraper__list__link_name_wrrpaer__id">5</span>
+                            <div class="main__wrraper__list__link_name_wrrpaer_name">ABDULLAYEV MUHAMMAD</div>
+                        </div>
+                        <span class="main__wrraper__list__link_color"></span>
+                        <div class="main__wrraper__list__link_comment">
+                            <img class="main__wrraper__list__link_comment__img" src="./css/img/png/chat.png" alt="error">
+                        </div>
+                    </li>
+                    <li class="main__wrraper__list__link">
+                        <div class="main__wrraper__list__link_name_wrrpaer">
+                            <span class="main__wrraper__list__link_name_wrrpaer__id">6</span>
+                            <div class="main__wrraper__list__link_name_wrrpaer_name">ABDULLAYEV MUHAMMAD</div>
+                        </div>
+                        <span class="main__wrraper__list__link_color"></span>
+                        <div class="main__wrraper__list__link_comment">
+                            <img class="main__wrraper__list__link_comment__img" src="./css/img/png/chat.png" alt="error">
+                        </div>
+                    </li>
+                    <li class="main__wrraper__list__link">
+                        <div class="main__wrraper__list__link_name_wrrpaer">
+                            <span class="main__wrraper__list__link_name_wrrpaer__id">7</span>
+                            <div class="main__wrraper__list__link_name_wrrpaer_name">ABDULLAYEV MUHAMMAD</div>
+                        </div>
+                        <span class="main__wrraper__list__link_color"></span>
+                        <div class="main__wrraper__list__link_comment">
+                            <img class="main__wrraper__list__link_comment__img" src="./css/img/png/chat.png" alt="error">
+                        </div>
+                    </li>
+                    <li class="main__wrraper__list__link">
+                        <div class="main__wrraper__list__link_name_wrrpaer">
+                            <span class="main__wrraper__list__link_name_wrrpaer__id">8</span>
+                            <div class="main__wrraper__list__link_name_wrrpaer_name">ABDULLAYEV MUHAMMAD</div>
+                        </div>
+                        <span class="main__wrraper__list__link_color"></span>
+                        <div class="main__wrraper__list__link_comment">
+                            <img class="main__wrraper__list__link_comment__img" src="./css/img/png/chat.png" alt="error">
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
-    </main>
+    </section>
 
     <script src="./index.js"></script>
 </body>
